Aligned master with 4.0 changes and fixes

--- a/src/app/gateway/states/gateway-connectors/components/bacnet/device-data-keys-pannel/bacnet-device-data-keys-panel.component.scss
+++ b/src/app/gateway/states/gateway-connectors/components/bacnet/device-data-keys-pannel/bacnet-device-data-keys-panel.component.scss
@@ -44,12 +44,6 @@
       font-size: 16px;
       padding-right: 0;
     }
-
-    .see-example {
-      width: 32px;
-      height: 32px;
-      margin: 4px;
-    }
   }
 }
 
